option java_outer_classname = "LCDeleteAreaInfo";
option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.common";

message DeleteAreaInfo{
	required	int64	terminalId	=1;
	repeated	int64	areaIdentify	=2;
}